# travel_LLM_planner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docker/: .dockerignore  .env.template  Dockerfile  Dockerfile.dockerignore  docker-compose.yml
docs/: 00_ADR-subject.md.template  01_ADR-motor-async-driver.md  02_ADR-core-db-module-structure.md  03_ADR-windows-developer-toolchain.md  04_ADR-testcontainers-integration-tests.md  05_ADR-pendulum-service-layer-only.md  06_ADR-pymongo-async-replica-set.md  07_ADR-exception-handling-middleware.md  08_ADR-langgraph-orchestrator-module.md  09_ADR-custom-mongodb-checkpointer.md  10_ADR-llm-tool-pattern.md
log/: main.log.template
src/: main.py
src/api/: exceptions.py  routers.py
src/config/: conf_logger.py  config.py  lifespan.py
src/core/: __init__.py  exceptions.py  middleware.py  routers.py
src/core/db/: deps.py  manager.py
src/core/gmaps/: __init__.py  enricher.py  models.py  router.py  scraper.py  storage.py
src/gmaps/: __init__.py  deps.py  manager.py  models.py  router.py  scraper.py  storage.py
src/optimizer/: __init__.py  deps.py  router.py
src/optimizer/matrix/: cache.py  client.py  models.py  service.py
src/optimizer/solver/: engine.py  models.py  multi_day_service.py  service.py
src/orchestrator/: __init__.py  checkpointer.py  deps.py  graph.py  manager.py  models.py  router.py  tools.py
src/panel/: api_client.py  app.py  chat_client.py  messages.py
tests/: conftest.py  test_main.py
tests/config/: test_config.py
tests/core/: test_exceptions.py  test_middleware.py
tests/core/gmaps/: test_models.py  test_storage.py
tests/gmaps/: test_manager.py  test_models.py  test_router.py  test_storage.py
tests/optimizer/: test_cache.py  test_client.py  test_engine.py  test_models.py  test_multi_day_models.py  test_multi_day_router.py  test_multi_day_service.py  test_router.py  test_service.py  test_solver_service.py
tests/orchestrator/: test_graph.py  test_manager.py  test_models.py  test_router.py  test_tools.py  test_tools_integration.py
tests/panel/: test_api_client.py  test_chat_client.py
