[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.12",
    "playwright>=1.58.0",
    "pymongo>=4.16.0",
    "httpx>=0.28.1",
    "uvicorn>=0.34.2",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]

[tool.pytest]
pythonpath = "./src"

[tool.pytest.ini_options]
addopts = "--junitxml=./result/pytest_result.xml --cov=src --cov-report html:result/html"
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore::SyntaxWarning",
]

[tool.ruff]
extend-exclude = []
line-length = 124

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.mypy]
files = ["src"]
exclude = ["tests/", "migrations/", "src/db/models.py"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.db.models"
disable_error_code = ["call-arg"]
