[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.12",
    "playwright>=1.58.0",
    "pymongo>=4.16.0",
    "httpx>=0.28.1",
    "uvicorn>=0.34.2",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "pydantic-settings>=2.13.1",
    "pendulum>=3.2.0",
    "polars>=1.38.1",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "commitizen>=4.13.9",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-httpx>=0.36.0",
    "ruff>=0.11.6",
    "testcontainers[mongodb]>=4.14.1",
    "ty>=0.0.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--junitxml=./tests/result/pytest_result.xml --cov=src --cov-report html:tests/result/html -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "unit: tests with no external dependencies",
    "integration: tests requiring the MongoDB testcontainer",
    "regression: regression tests for known bugs",
]
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore::SyntaxWarning",
    "ignore:The wait_for_logs function:DeprecationWarning:testcontainers",
]

[tool.ruff]
extend-exclude = []
line-length = 124

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ty.src]
exclude = ["tests/*"]

[tool.codespell]
skip = """
./.git,
./.github,
./tests/.*,
./temp/.*,
./log/.*,
./src/content/ui_content.yaml,
./src/core/agent/prompts/templates.yaml
"""
builtin = "clear"
quiet-level = 3

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
change_type_order = ["feat", "fix", "hotfix", "chore", "docs", "refactor", "test"]


schema_pattern = "(build|chore|ci|docs|feature|feat|fix|hotfix|perf|refactor|style|test|config)(\\(.+\\))?!?: .+"

[tool.commitizen.schema_mapping]
feature = "feat"
hotfix = "fix"
config = "chore"

[[tool.commitizen.customize.questions]]
type = "list"
name = "type"
message = "Jaki prefix?"
choices = [
    { value = "feat", name = "feature" },
    { value = "fix", name = "hotfix" },
    { value = "chore", name = "config" },
    { value = "refactor", name = "refactor" },
    { value = "docs", name = "docs" },
    { value = "test", name = "tests" },
    { value = "chore", name = "chore/other" },
]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug Fixes"
hotfix = "Hotfixes"
chore = "Chores"
docs = "Documentation"
refactor = "Refactors"
test = "Tests"
